dev/tests/cases/neg/25_float_in_int_chain.tv
df main() -> void {
    set n: i64 = 5;
    echo!(n + 2.5);
}
